# backtester

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  PORTFOLIO_STANDARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
docs/: generate_hero_placeholder.py  generate_results_figure.py  writeup.md
notebooks/: 01_gbm_us_equities.ipynb  01_tabular_equities.ipynb  02_crypto_signal_universe.ipynb  02_sequence_models_crypto.ipynb  03_sequence_crypto.ipynb  04_llm_sentiment.ipynb  05_momentum_positive_control.ipynb  README.md
samples/: universe_us_liquid.csv
samples/fixtures/: binance_funding_BNBUSDT.csv  binance_funding_BTCUSDT.csv  binance_funding_ETHUSDT.csv  binance_funding_MATICUSDT.csv  binance_funding_XRPUSDT.csv  binance_klines_futures_DOGEUSDT_1d.csv  binance_klines_futures_ETHUSDT_1d.csv  binance_klines_futures_LINKUSDT_1d.csv  binance_premium_AVAXUSDT_1d.csv  binance_premium_BNBUSDT_1d.csv  binance_premium_BTCUSDT_1d.csv  binance_premium_ETHUSDT_1d.csv  binance_premium_LINKUSDT_1d.csv  binance_premium_MATICUSDT_1d.csv  binance_premium_XRPUSDT_1d.csv  fred_T10Y2Y.csv  fred_VIXCLS.csv  yfinance_AAPL.csv  yfinance_ADBE.csv  yfinance_AMZN.csv  yfinance_BA.csv  yfinance_CSCO.csv  yfinance_DIS.csv  yfinance_GOOG.csv  yfinance_JNJ.csv  yfinance_KO.csv  yfinance_MCD.csv  yfinance_MS.csv  yfinance_NVDA.csv  yfinance_ORCL.csv  yfinance_PEP.csv  yfinance_PG.csv  yfinance_PYPL.csv  yfinance_T.csv  yfinance_V.csv  yfinance_VZ.csv  yfinance_WMT.csv
samples/fixtures/binance/: binance_funding_ADAUSDT.csv  binance_funding_AVAXUSDT.csv  binance_funding_DOGEUSDT.csv  binance_funding_LINKUSDT.csv  binance_funding_SOLUSDT.csv  binance_klines_futures_ADAUSDT_1d.csv  binance_klines_futures_AVAXUSDT_1d.csv  binance_klines_futures_BNBUSDT_1d.csv  binance_klines_futures_BTCUSDT_1d.csv  binance_klines_futures_MATICUSDT_1d.csv  binance_klines_futures_SOLUSDT_1d.csv  binance_klines_futures_XRPUSDT_1d.csv  binance_premium_ADAUSDT_1d.csv  binance_premium_DOGEUSDT_1d.csv  binance_premium_SOLUSDT_1d.csv
samples/fixtures/fred/: fred_BAA10Y.csv
samples/fixtures/yfinance/: yfinance_BAC.csv  yfinance_C.csv  yfinance_CAT.csv  yfinance_CVX.csv  yfinance_F.csv  yfinance_GE.csv  yfinance_GOOGL.csv  yfinance_GS.csv  yfinance_HD.csv  yfinance_IBM.csv  yfinance_INTC.csv  yfinance_JPM.csv  yfinance_MA.csv  yfinance_META.csv  yfinance_MSFT.csv  yfinance_NFLX.csv  yfinance_NKE.csv  yfinance_SPY.csv  yfinance_TSLA.csv  yfinance_WFC.csv  yfinance_XOM.csv
samples/ohlcv/: AMZN.csv  MSFT.csv  SPY.csv  TSLA.csv
scripts/: build_fixtures.py  generate_hero_placeholder.py  generate_results_figure.py
src/backtester/: __init__.py  cli.py
src/backtester/data/: __init__.py  _cache.py  _fixture.py  alpha_vantage.py  binance.py  csv_loader.py  fred.py  llm.py  news.py  universe.py  yfinance.py
src/backtester/engine/: __init__.py  optimizer.py  (+1 more)
tests/: test_data.py  test_data_llm.py  test_data_universe.py  test_engine.py  test_eval_costs.py  test_eval_cpcv.py  test_eval_feature_importance.py  test_eval_pbo.py  test_eval_regimes.py  test_eval_statistics.py  test_eval_walkforward.py  test_features_leakage.py  test_features_sentiment.py  test_labels_triple_barrier.py  test_metrics.py  test_models_gbm.py  test_models_linear.py  test_models_random_forest.py  test_models_sequence.py  test_portfolio_cross_sectional.py  test_strategy_cross_sectional.py
(+29 files in other folders)
