[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtester"
version = "0.1.0"
description = "Event-driven backtesting framework with a Streamlit dashboard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["backtesting", "trading", "quant", "backtrader", "streamlit"]
authors = [{ name = "Rodrigo Medeiros" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "backtrader==1.9.78.123",
  "pandas>=2.0,<3.0",
  "numpy>=1.26,<3.0",
  "matplotlib>=3.8,<4.0",
  "plotly>=5.20,<6.0",
  "streamlit>=1.31,<2.0",
  "alpha-vantage>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
]

[project.scripts]
backtester = "backtester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
